# GM

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUSTRALIA-FORK.md  CENTRAL_ASIA_SOURCES.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEV_SETUP.md  Dockerfile  Dockerfile.relay  LICENSE  NOTICE.md  README.md  README.zh.md  SECURITY.md  SELF_HOSTING.md  VPS_REFACTORING_PLAN.md  _config.yml  docker-compose.yml  index.html  nginx-security-headers.conf  nginx.conf  nginx.conf.template  package-lock 2.json  package-lock.json  package.json  tsconfig.api.json  vercel.json  vite.config.ts  wmsm.sh
.github/: copilot-instructions.md  mcp.json
.husky/: pre-commit  pre-push
.planning/: ROADMAP.md
api/: _api-key.js  _cors.js  _cors.test.mjs  _relay.js  _rss-allowed-domains.js  ais-snapshot.js  claude-agent.js  download.js  flights.js  gpsjam.js  health.js  opensky.js  rss-proxy.js  story.js  telegram-channel.js  telegram-feed.js  telegram-resolve.js  version.js
blog-site/: astro.config.mjs
convex/: entitlements.ts  http.ts  registerInterest.ts  schema.ts
data/: vendors.json
docker/: Dockerfile  build-handlers.mjs  nginx.conf  redis-rest-proxy.mjs  supervisord.conf  worldmonitor.service
docs/: ADDING_ENDPOINTS.md  AI_INTELLIGENCE.md  API_KEY_DEPLOYMENT.md  ARCHITECTURE.md  COMMUNITY-PROMOTION-GUIDE.md  DESKTOP_CONFIGURATION.md  DOCUMENTATION.md  RAG_FAILURE_CHECKLIST.md  RELEASE_PACKAGING.md  fear-greed-index-2.0-brief.md  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/sidecar/: local-api-server.mjs  local-api-server.test.mjs
src-tauri/src/: main.rs
(+814 files in other folders)
