[package]
name = "worldmonitor-macos"
version = "2.5.25"
description = "World Monitor macOS native desktop application"
authors = ["Bradley Bond", "Elie Habib"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json"] }
getrandom = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
