[package]
name = "worldmonitor"
version = "2.6.0"
description = "World Monitor cross-platform desktop application (based on World Monitor by Elie Habib)"
authors = ["Bradley Bond", "Elie Habib"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json"] }
getrandom = "0.4"

[features]
default = ["custom-protocol", "tauri/devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
